Made changes to fit to small screens

--- a/index.html
+++ b/index.html
@@ -32,7 +32,10 @@
         <div id="message" class="message"></div>
         <div class="selectedWords"></div>
       </div>
-      <div id="keyboard"></div>
+      <div class="keyboard-container">
+        <div id="keyboard"></div>
+      </div>
+      <!-- <div id="keyboard"></div> -->
       <div class="btn">
         <button class="startGame">Start Game</button>
         <button class="resetGame">Reset Game</button>
