made few changes keys color, name

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="marquee">
       <!-- 🎉 స్వాగతం! తెలుగు మాటల ఆటను ఆడుతూ ఆనందించండి! 🎉 -->
     </div>
-    <h1 class="header">తెలుగు మాట్లాట - ఒక సరదా ఆట</h1>
+    <h1 class="header">పదశోధన - ఒక సరదా ఆట</h1>
     <h2 class="categoryTitle" style="display: none"></h2>
 
     <div class="container">
