Implementing score & added more words

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!-- index.html -->
-<!DOCTYPE html>
+<!doctype html>
 <html lang="te">
   <head>
     <meta charset="UTF-8" />
@@ -22,7 +22,8 @@
     <h2 class="categoryTitle" style="display: none"></h2>
 
     <div class="container">
-        <div class="categories" style="display: none">
+      <div class="score">Score: 0</div>
+      <div class="categories" style="display: none">
         <div class="category" data-category="ప్రదేశాలు">ప్రదేశాలు</div>
         <div class="category" data-category="సినిమాలు">సినిమాలు</div>
         <div class="category" data-category="సాహిత్యం">సాహిత్యం</div>
@@ -38,8 +39,10 @@
       <!-- <div id="keyboard"></div> -->
       <div class="btn">
         <button class="startGame">Start Game</button>
-        <button class="resetGame">Reset Game</button>
+        <!-- <button class="resetGame">Reset Game</button> -->
+        <button class="continueGame">Continue</button>
+        <button class="endGame">End Game</button>
       </div>
     </div>
-</body>
+  </body>
 </html>
