--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Telugu Word Game</title>
     <link rel="stylesheet" href="style.css" />
     <!-- ✅ Order matters: data.js first, then script.js -->
-    <script type="module" src="data.js"></script>
+    <script type="module" src="data.obf.js"></script>
     <script type="module" src="script.obf.js"></script>
     <link
       rel="stylesheet"
