--- a/index.html
+++ b/index.html
@@ -4,29 +4,24 @@
       <h4 id="formTitle">Registration Here</h4>
 
       <input type="text" name="FullName" placeholder="Name" required />
-      <input type="email" name="Email" placeholder="Email" required />
-      <input type="text" name="Age" placeholder="Age" required pattern="\d{1,2}" title="Please enter a valid age (numbers only)">
-      <!-- <input type="text" name="Age" placeholder="Age" required /> -->
+      <input type="text" name="Email" placeholder="Email" required />
+      <input type="text" name="Age" placeholder="Age" required />
 
       <!-- Hidden Fields for Score & Feedback -->
       <div id="gameFeedbackSection" style="display: none">
-        <!-- <h4>Game Feedback</h4> -->
+        <h4>Game Feedback</h4>
         <input type="text" name="Score" id="scoreField" readonly />
-        <textarea
-          name="Feedback"
-          rows="4"
-          placeholder="Your feedback"
-        ></textarea>
+        <textarea name="Feedback" rows="4" placeholder="Your feedback"></textarea>
       </div>
 
-      <input type="submit" value="Submit" id="submit" />
+      <div class="button-container">
+        <input type="submit" value="Submit" id="submit" />
+        <button type="button" id="skipRegistration">Skip Registration</button>
+      </div>
     </form>
   </div>
 
   <link rel="stylesheet" href="registration.css" />
   <script type="module" src="dummy.obf.js"></script>
-  <link
-    rel="stylesheet"
-    href="https://fonts.googleapis.com/css2?family=Noto+Sans+Telugu&display=swap"
-  />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Noto+Sans+Telugu&display=swap">
 </body>
