--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <body>
   <div class="container">
     <form method="post" action="" name="RegistrationForm">
+         <!-- Help Button -->
+         <button id="helpButton" class="help-btn" type="button">Read This Before You Begin</button>
+
       <h4 id="formTitle">Registration Here</h4>
+     
 
       <input type="text" name="FullName" placeholder="Name" required />
       <input type="text" name="Email" placeholder="Email" required />
@@ -11,17 +15,127 @@
       <div id="gameFeedbackSection" style="display: none">
         <h4>Game Feedback</h4>
         <input type="text" name="Score" id="scoreField" readonly />
-        <textarea name="Feedback" rows="4" placeholder="Your feedback"></textarea>
+        <textarea
+          name="Feedback"
+          rows="4"
+          placeholder="Your feedback"
+        ></textarea>
       </div>
 
       <div class="button-container">
         <input type="submit" value="Submit" id="submit" />
         <button type="button" id="skipRegistration">Skip Registration</button>
       </div>
+  
+
+      <!-- Help Modal (Pop-up Window) -->
+      <div id="helpModal" class="modal">
+        <div class="modal-content">
+          <span class="close">&times;</span>
+          <h2>ℹ️ How to Play the Game</h2>
+          <div class="help-text">
+            <h3>📜 Registration – Why Register?</h3>
+            <ul>
+              <li>
+                1️⃣ Track your score and progress, especially when participating
+                in competitions.
+              </li>
+              <li>
+                2️⃣ Receive a Telugu Word of the Day via email to start your day
+                with fresh learning! 🌅
+              </li>
+              <li>
+                3️⃣ Help us spread the love for Telugu by sharing with friends
+                and family who cherish the language.
+              </li>
+              <li>
+                4️⃣ Your feedback matters! Share your thoughts to make the game
+                even more fun and engaging. 🎉
+              </li>
+            </ul>
+
+            <h3>⏩ Skip Registration – Just Play & Enjoy!</h3>
+            <p>
+              Not ready to register? No worries! Click **Skip Registration** and
+              jump straight into the game. Have fun exploring Telugu words! 🎮
+            </p>
+
+            <h3>📂 Game Categories</h3>
+            <p>
+              We’ve carefully crafted four exciting categories for you to
+              explore. 🌟
+            </p>
+            <ul>
+              <li>🔹 We’ll keep expanding and adding more words over time.</li>
+              <li>
+                🔹 Planning a special event or social gathering? Let us know,
+                and we’ll add words related to your occasion! 🎊
+              </li>
+            </ul>
+
+            <h3>🏆 Score & Game Rules – Play, Learn & Win!</h3>
+            <p>
+              <strong
+                >🎯 Your Goal → Guess the word by revealing each letter in 4
+                attempts.</strong
+              >
+            </p>
+
+            <h4>✅ Scoring System:</h4>
+            <ul>
+              <li>🔵 1st Attempt → 100 points</li>
+              <li>🟢 2nd Attempt → 75 points</li>
+              <li>🟡 3rd Attempt → 50 points</li>
+              <li>🟠 4th Attempt → 25 points</li>
+              <li>
+                💡 Missed all 4 attempts? Don’t worry! The system will reveal
+                the letter and still award you 25 points.
+              </li>
+            </ul>
+
+            <h4>📢 Game Progression:</h4>
+            <ul>
+              <li>
+                ✅ Keep revealing letters until the full word is displayed.
+              </li>
+              <li>✅ No additional points for completing the word.</li>
+              <li>
+                ✅ No negative points! This game is about celebrating Telugu—so
+                no penalties! 🥳
+              </li>
+            </ul>
+
+            <h4>👀 Smart Hint:</h4>
+            <p>
+              Clicked a letter and it’s not greyed out? Try clicking it again—it
+              might earn you 100 points! 😉
+            </p>
+
+            <h4>🗂 Category Selection:</h4>
+            <ul>
+              <li>🔹 Click any category to start or continue playing.</li>
+              <li>🔹 To keep the fun and excitement going, rotate the categories!</li>
+              <li>
+                🔹 Once all words in a category are completed, it greys out, and
+                you’ll be prompted to choose another category.
+              </li>
+            </ul>
+
+            <h4>🚪 Ending the Game:</h4>
+            <ul>
+              <li>✅ Click **End Game** whenever you’re ready to stop.</li>
+              <li>✅ Close the window/tab once you’re done.</li>
+            </ul>
+          </div>
+        </div>
+      </div>
     </form>
   </div>
 
   <link rel="stylesheet" href="registration.css" />
   <script type="module" src="dummy.obf.js"></script>
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Noto+Sans+Telugu&display=swap">
+  <link
+    rel="stylesheet"
+    href="https://fonts.googleapis.com/css2?family=Noto+Sans+Telugu&display=swap"
+  />
 </body>
