added more help details

--- a/game.html
+++ b/game.html
@@ -1,5 +1,5 @@
 <!-- index.html -->
-<!doctype html>
+<!DOCTYPE html>
 <html lang="te">
   <head>
     <meta charset="UTF-8" />
@@ -47,24 +47,22 @@
       </div>
     </div>
 
-
     <!-- Help Modal (Pop-up Window) -->
     <div id="helpModal" class="modal">
       <div class="modal-content">
         <span class="close">&times;</span>
         <h2>ℹ️ How to Play the Game</h2>
         <div class="help-text">
-
           <h3>📂 Game Categories</h3>
           <p>
-            We’ve carefully crafted four exciting categories for you to
-            explore. 🌟
+            We’ve carefully crafted four exciting categories for you to explore.
+            🌟
           </p>
           <ul>
             <li>🔹 We’ll keep expanding and adding more words over time.</li>
             <li>
-              🔹 Planning a special event or social gathering? Let us know,
-              and we’ll add words related to your occasion! 🎊
+              🔹 Planning a special event or social gathering? Let us know, and
+              we’ll add words related to your occasion! 🎊
             </li>
           </ul>
 
@@ -83,20 +81,77 @@
             <li>🟡 3rd Attempt → 50 points</li>
             <li>🟠 4th Attempt → 25 points</li>
             <li>
-              💡 Missed all 4 attempts? Don’t worry! The system will reveal
-              the letter and still award you 25 points.
+              💡 Missed all 4 attempts? Don’t worry! The system will reveal the
+              letter and still award you 25 points.
             </li>
           </ul>
 
-          <h4>📢 Game Progression:</h4>
+          <h3>ℹ️ How to Start the Game</h3>
+
+          <p>
+            1️⃣ <strong>Click "Start Game"</strong> → Select any category of your
+            interest and begin guessing the word using the virtual Telugu
+            keyboard.
+          </p>
+
+          <p>
+            2️⃣
+            <strong
+              >Don't worry about dependent vowels or special characters!</strong
+            >
+            - The system automatically takes care of them when you select a
+            letter.
+          </p>
+
+          <p>3️⃣ <strong>Example:</strong></p>
+          <ul>
+            <li>Suppose the word is <strong>సంక్రాంతి</strong></li>
+            <li>
+              The system will reveal <strong>3 boxes</strong> to match the
+              syllables:
+            </li>
+            <li><strong>సం | క్రాం | తి</strong></li>
+            <li>
+              You only need to guess <strong>స, క, త</strong> (order doesn’t
+              matter) and click them on the keyboard.
+            </li>
+          </ul>
+
+          <p>4️⃣ <strong>Keyboard Behavior:</strong></p>
           <ul>
             <li>
-              ✅ Keep revealing letters until the full word is displayed.
+              If you pick a correct or incorrect letter, that letter will be
+              <strong>greyed out</strong> on the keyboard, indicating it has
+              been used.
             </li>
+          </ul>
+
+          <h3>📂 Understanding Categories</h3>
+          <p>
+            🔹 <strong>Categories are broad.</strong> For example, if the
+            category is "Movies," it includes:
+          </p>
+          <ul>
+            <li>🎬 <strong>Movie names</strong></li>
+            <li>
+              🎭 <strong>Actors, Directors, and Industry-related people</strong>
+            </li>
+          </ul>
+
+          <h3>🎯 Play Your Way!</h3>
+          <p>
+            We leave the rest <strong>to your judgment.</strong> After all, it’s
+            a <strong>game</strong>—find your own strategies to
+            <strong>master it and have fun!</strong> 🎉
+          </p>
+
+          <h4>📢 Game Progression:</h4>
+          <ul>
+            <li>✅ Keep revealing letters until the full word is displayed.</li>
             <li>✅ No additional points for completing the word.</li>
             <li>
-              ✅ No negative points! This game is about celebrating Telugu—so
-              no penalties! 🥳
+              ✅ No negative points! This game is about celebrating Telugu—so no
+              penalties! 🥳
             </li>
           </ul>
 
@@ -109,7 +164,9 @@
           <h4>🗂 Category Selection:</h4>
           <ul>
             <li>🔹 Click any category to start or continue playing.</li>
-            <li>🔹 To keep the fun and excitement going, rotate the categories!</li>
+            <li>
+              🔹 To keep the fun and excitement going, rotate the categories!
+            </li>
             <li>
               🔹 Once all words in a category are completed, it greys out, and
               you’ll be prompted to choose another category.
