--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <div id="helpModal" class="modal">
         <div class="modal-content">
           <span class="close">&times;</span>
-          <h2>ℹ️ How to Play the Game</h2>
+          <!-- <h2>ℹ️ Before You Start</h2> -->
           <div class="help-text">
             <h3>📜 Registration – Why Register?</h3>
             <ul>
@@ -60,72 +60,8 @@
               jump straight into the game. Have fun exploring Telugu words! 🎮
             </p>
 
-            <h3>📂 Game Categories</h3>
-            <p>
-              We’ve carefully crafted four exciting categories for you to
-              explore. 🌟
-            </p>
-            <ul>
-              <li>🔹 We’ll keep expanding and adding more words over time.</li>
-              <li>
-                🔹 Planning a special event or social gathering? Let us know,
-                and we’ll add words related to your occasion! 🎊
-              </li>
-            </ul>
+            <h3 class="flash-text">⏩ Once you're on the Game Page, click '❓ Help' to learn how to play!</h3>
 
-            <h3>🏆 Score & Game Rules – Play, Learn & Win!</h3>
-            <p>
-              <strong
-                >🎯 Your Goal → Guess the word by revealing each letter in 4
-                attempts.</strong
-              >
-            </p>
-
-            <h4>✅ Scoring System:</h4>
-            <ul>
-              <li>🔵 1st Attempt → 100 points</li>
-              <li>🟢 2nd Attempt → 75 points</li>
-              <li>🟡 3rd Attempt → 50 points</li>
-              <li>🟠 4th Attempt → 25 points</li>
-              <li>
-                💡 Missed all 4 attempts? Don’t worry! The system will reveal
-                the letter and still award you 25 points.
-              </li>
-            </ul>
-
-            <h4>📢 Game Progression:</h4>
-            <ul>
-              <li>
-                ✅ Keep revealing letters until the full word is displayed.
-              </li>
-              <li>✅ No additional points for completing the word.</li>
-              <li>
-                ✅ No negative points! This game is about celebrating Telugu—so
-                no penalties! 🥳
-              </li>
-            </ul>
-
-            <h4>👀 Smart Hint:</h4>
-            <p>
-              Clicked a letter and it’s not greyed out? Try clicking it again—it
-              might earn you 100 points! 😉
-            </p>
-
-            <h4>🗂 Category Selection:</h4>
-            <ul>
-              <li>🔹 Click any category to start or continue playing.</li>
-              <li>🔹 To keep the fun and excitement going, rotate the categories!</li>
-              <li>
-                🔹 Once all words in a category are completed, it greys out, and
-                you’ll be prompted to choose another category.
-              </li>
-            </ul>
-
-            <h4>🚪 Ending the Game:</h4>
-            <ul>
-              <li>✅ Click **End Game** whenever you’re ready to stop.</li>
-              <li>✅ Close the window/tab once you’re done.</li>
-            </ul>
           </div>
         </div>
       </div>
