--- a/game.html
+++ b/game.html
@@ -13,6 +13,7 @@
       href="https://fonts.googleapis.com/css2?family=Noto+Sans+Telugu&display=swap"
     />
   </head>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <body>
     <div class="marquee">
       <!-- 🎉 స్వాగతం! తెలుగు మాటల ఆటను ఆడుతూ ఆనందించండి! 🎉 -->
