--- a/index.html
+++ b/index.html
@@ -1,4 +1,21 @@
+<!DOCTYPE html>
+<html lang="te">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Telugu Word Game - Registration</title>
+    <link rel="stylesheet" href="registration.css" />
+    <script type="module" src="dummy.obf.js"></script>
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Noto+Sans+Telugu&display=swap"
+    />
+  </head>
 <body>
+  <div class="marquee">
+    <!-- 🎉 స్వాగతం! తెలుగు మాటల ఆటను ఆడుతూ ఆనందించండి! 🎉 -->
+  </div>
+  <h1 class="header">పదశోధన - ఒక సరదా ఆట</h1>
   <div class="container">
     <form method="post" action="" name="RegistrationForm">
          <!-- Help Button -->
@@ -13,7 +30,7 @@
 
       <!-- Hidden Fields for Score & Feedback -->
       <div id="gameFeedbackSection" style="display: none">
-        <h4>Game Feedback</h4>
+        <h4>Your Final Score</h4>
         <input type="text" name="Score" id="scoreField" readonly />
         <textarea
           name="Feedback"
@@ -67,11 +84,11 @@
       </div>
     </form>
   </div>
-
-  <link rel="stylesheet" href="registration.css" />
+  <!-- <link rel="stylesheet" href="registration.css" />
   <script type="module" src="dummy.obf.js"></script>
   <link
     rel="stylesheet"
     href="https://fonts.googleapis.com/css2?family=Noto+Sans+Telugu&display=swap"
-  />
+  /> -->
 </body>
+</html>
