Restructured TeluguMatlata: new folders, kids version, game updates

--- a/pages/game.html
+++ b/pages/game.html
@@ -1,13 +1,14 @@
 <!-- index.html -->
-<!DOCTYPE html>
+<!doctype html>
 <html lang="te">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Telugu Word Game</title>
-    <link rel="stylesheet" href="style.css" />
-    <script type="module" src="data.obf.js"></script>
-    <script type="module" src="script.obf.js"></script>
+    <link rel="stylesheet" href="../css/style.css" />
+    <script type="module" src="../js/adt_obf.js"></script>
+    <script type="module" src="../js/asct.obf.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.5.1/dist/confetti.browser.min.js"></script>
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Noto+Sans+Telugu&display=swap"
