Restructured TeluguMatlata: moved index to root

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Telugu Word Game - Registration</title>
-    <link rel="stylesheet" href="../css/registration.css" />
-    <script type="module" src="../js/dummy.obf.js"></script>
+    <link rel="stylesheet" href="css/registration.css" />
+    <script type="module" src="js/dummy.obf.js"></script>
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Noto+Sans+Telugu&display=swap"
@@ -28,7 +28,6 @@
         <input type="text" name="FullName" placeholder="Name" required />
         <input type="text" name="Email" placeholder="Email" required />
         <input type="text" name="Age" placeholder="Age" required />
-  
 
         <!-- Hidden Fields for Score & Feedback -->
         <div id="gameFeedbackSection" style="display: none">
@@ -88,16 +87,10 @@
         </div>
       </form>
     </div>
-    <!-- <link rel="stylesheet" href="registration.css" />
-  <script type="module" src="dummy.obf.js"></script>
-  <link
-    rel="stylesheet"
-    href="https://fonts.googleapis.com/css2?family=Noto+Sans+Telugu&display=swap"
-  /> -->
 
     <!-- 🌟 Exciting Star Button for Kids -->
     <div class="kids-star-wrapper">
-      <a href="kids.html" class="kids-star"> ⭐ Kids click here ⭐ </a>
+      <a href="pages/kids.html" class="kids-star"> ⭐ Kids click here ⭐ </a>
     </div>
   </body>
 </html>
