--- a/pages/kids.html
+++ b/pages/kids.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="data:," />
-    <!-- Prevents the favicon.ico 404 error -->
+    <!-- Prevents the favicon.ico 404 error (optional)-->
     <title>Telugu Word Game - Kids</title>
     <link rel="stylesheet" href="../css/kidStyle.css" />
     <script src="../js/kdt_obf.js"></script>
